--- a/app/globals.css
+++ b/app/globals.css
@@ -51,28 +51,28 @@
   --card-foreground: #202020;
   --popover: #FFFFFF;
   --popover-foreground: #202020;
-  /* --primary: #FAC300 ; */
+  /* --primary: #f9831e ; */
   --primary: #f9831e;
   --primary-foreground: #202020;
   --secondary: #6C6C6D;
   --secondary-foreground: #FFFFFF;
   --muted: #F5F5F5;
   --muted-foreground: #6C6C6D;
-  --accent: #FAC300;
+  --accent: #f9831e;
   --accent-foreground: #202020;
   --destructive: #DC2626;
   --destructive-foreground: #FFFFFF;
   --border: #E5E5E5;
   --input: #E5E5E5;
-  --ring: #FAC300;
-  --chart-1: #FAC300;
+  --ring: #f9831e;
+  --chart-1: #f9831e;
   --chart-2: #6C6C6D;
   --chart-3: #202020;
   --chart-4: #FCDA59;
   --chart-5: #A9A9A9;
   --sidebar: #FAFAFA;
   --sidebar-foreground: #202020;
-  --sidebar-primary: #FAC300;
+  --sidebar-primary: #f9831e;
   --sidebar-primary-foreground: #202020;
   --sidebar-accent: #6C6C6D;
   --sidebar-accent-foreground: oklch(1.0000 0 0);
@@ -107,34 +107,34 @@
   --card-foreground: #F5F5F5;
   --popover: #2A2A2A;
   --popover-foreground: #F5F5F5;
-  /* --primary: #FAC300; */
+  /* --primary: #f9831e; */
   --primary: #f9831e;
   --primary-foreground: #202020;
   --secondary: #6C6C6D;
   --secondary-foreground: #FFFFFF;
   --muted: #333333;
   --muted-foreground: #6C6C6D;
-  /* --accent: #FAC300; */
+  /* --accent: #f9831e; */
   --accent: #f9831e;
   --accent-foreground: #202020;
   --destructive: #E54848;
   --destructive-foreground: #FFFFFF;
   --border: #444444;
   --input: #444444;
-  --ring: #FAC300;
-  --chart-1: #FAC300;
+  --ring: #f9831e;
+  --chart-1: #f9831e;
   --chart-2: #6C6C6D;
   --chart-3: #F5F5F5;
   --chart-4: #FCDA59;
   --chart-5: #A9A9A9;
   --sidebar: #202020;
   --sidebar-foreground: #F5F5F5;
-  --sidebar-primary: #FAC300;
+  --sidebar-primary: #f9831e;
   --sidebar-primary-foreground: #202020;
   --sidebar-accent: #2A2A2A;
   --sidebar-accent-foreground: #F5F5F5;
   --sidebar-border: #444444;
-  --sidebar-ring: #FAC300;
+  --sidebar-ring: #f9831e;
   --font-sans: "Oxanium", sans-serif;
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
   --font-mono: "Source Code Pro", monospace;
